--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans|Maven+Pro&display=swap');
+
+html, body {
+  margin: 0 auto;
+  box-sizing: border-box;
+  font-family: 'Maven Pro', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Fira Sans', sans-serif;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.register-form {
+  position: absolute;
+  width: 725px;
+  height: 940px;
+  left: 715px;
+  padding-left: 136px;
+  background: #F1F3F6;
+  backdrop-filter: blur(10px);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+input {
+  display: block;
+  width: 432px;
+  height: 54px;
+  margin: 2%;
 }
+
+.createAcct {
+  width: 277px;
+  height: 40px;
+  font-size: 31.3px;
+  line-height: 127%;
+  margin-top: 98px;
+}
+
+.check-container {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.check-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: white;
+  border: 1px solid black;
+}
+
+.check-container input:checked ~.checkmark {
+  background-color: #7FAECC;
+}
+
+.checkmark:after {
+  content: '';
+  position: absolute;
+  display: none;
+}
+
+
+.check-container input:checked ~.checkmark:after {
+  display: block;
+}
+
+.check-container .checkmark:after {
+  left: 4px;
+  bottom: 2px;
+  width: 8px;
+  height: 15px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.createBtn {
+  width: 366px;
+  height: 48px;
+  background: #7FAECC;
+  border-radius: 8px;
+}
+
+
