--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ input {
   margin: 2% 0;
 }
 
-.createAcct {
+.formHeading {
   width: 277px;
   height: 40px;
   font-size: 31.3px;
@@ -77,7 +77,6 @@ input {
   display: none;
 }
 
-
 .checkContainer input:checked ~.checkmark:after {
   display: block;
 }
@@ -103,7 +102,7 @@ input {
   font-weight: bold;
 }
 
-.registerForm, .signinForm a {
+.registerForm a, .signinForm a {
   text-decoration: none;
   color: #F46032;
   font-weight: bold;
