--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,6 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
 }
 
-.registerForm {
-  height: 1150px;
-}
-
 .registerForm, .signinForm {
   position: absolute;
   width: 725px;
@@ -33,6 +29,11 @@ h1, h2, h3, h4, h5, h6 {
   backdrop-filter: blur(10px);
 }
 
+/* Register Form styles */
+
+.registerForm {
+  height: 1150px;
+}
 
 input {
   display: block;
@@ -117,6 +118,8 @@ input {
   font-weight: bold;
 }
 
+/* Sign In Form Styles */
+
 .signinForm {
   height: 940px;
 }
@@ -128,4 +131,33 @@ input {
 
 .signinImg img {
   height: 940px;
+}
+
+/* NavBar Styles */
+nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 84px;
+  background-color: #1F2A4C;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+}
+
+i {
+  color: white;
+}
+
+.sellBtn {
+  width: 215px;
+  height: 48px;
+  background: #7FAECC;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  font-weight: bold;
 }
