--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html, body {
   margin: 0 auto;
   box-sizing: border-box;
   font-family: 'Maven Pro', sans-serif;
+  background-color: #E5E5E5;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -184,11 +185,19 @@ i {
   display: flex;
   flex-direction: column;
   width: 496px;
+  margin: 2%;
+  background: #F8F9FA;
+  border-radius: 10px;
+}
+
+.farmCard h5 {
+  margin: 2% 3%;
 }
 
 .farmCardHeader {
   display: flex;
   align-items: center;
+  margin: 0 3%;
 }
 
 .farmCardHeader p {
@@ -203,15 +212,51 @@ i {
 .farmCardDesc {
   display: flex;
   justify-content: space-between;
+  margin: 0 3% 2%;
+}
+
+.farmCardDesc button {
+  width: 120px;
+  height: 32px;
+  background: #7FAECC;
+  border: none;
+  border-radius: 4px;
+  font-size: 12.8px;
+  font-weight: bold;
 }
 
 
 /* Farm List styles */
+.farmList {
+  width: 100%;
+}
+
 .headerImg {
   background-image: url('./components/farm.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 1500px;
+  width: 100%;
   height: 196px;
+  padding: 1% 2%;
+  color: white;
+}
+
+.headerImg p {
+  width: 40%;
+}
+
+.farmsMain {
+  display: flex;
+}
+
+.filterBy {
+  width: 411px;
+  margin-left: 20px;
+}
+
+.farms {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 1% 1%;
 }
