--- a/src/App.css
+++ b/src/App.css
@@ -196,18 +196,14 @@ i {
   border-radius: 10px;
 }
 
-.farmCard h5 {
-  margin: 2% 3%;
-}
-
 .farmCardHeader {
   display: flex;
   align-items: center;
   margin: 0 3%;
 }
 
-.farmCardHeader p {
-  padding-left: 10%;
+.farmCardHeader h4 {
+  padding-right: 10%;
 }
 
 .farmCard img {
@@ -217,8 +213,9 @@ i {
 
 .farmCardDesc {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  margin: 0 3% 2%;
+  margin: 1% 3% 2%;
 }
 
 .farmCardDesc button {
@@ -229,6 +226,25 @@ i {
   border-radius: 4px;
   font-size: 12.8px;
   font-weight: bold;
+}
+
+.favorite {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.heart {
+  border: none;
+  margin-right: 3%;
+}
+
+.farmCard h5 {
+  margin: 2% 3%;
+}
+
+.fa-heart {
+  color: black;
 }
 
 
