--- a/src/App.css
+++ b/src/App.css
@@ -465,6 +465,16 @@ footer a {
   .footerBtmRight {
     margin-left: 53%;
   }
+  .cartBody {
+    flex-direction: column;
+    align-items: center;
+  }
+  .itemList {
+    width: 100%;
+  }
+  .orderSummary {
+    width: 100%;
+  }
 }
 
 
